--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MOBDEVEInternshipConnectMisaSo">
         <activity
+            android:name=".company.AddInternship"
+            android:exported="false" />
+        <activity
             android:name=".Register"
             android:exported="false" />
         <activity
