--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MOBDEVEInternshipConnectMisaSo">
         <activity
+            android:name=".company.CompanyAddJobPosting"
+            android:exported="false" />
+        <activity
+            android:name=".intern.InternEditProfile"
+            android:exported="false" />
+        <activity
+            android:name=".company.CompanyEditProfile"
+            android:exported="false" />
+        <activity
             android:name=".intern.InternMenu"
             android:exported="false" />
         <activity
