--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MOBDEVEInternshipConnectMisaSo">
         <activity
+            android:name=".intern.InternFeedback"
+            android:exported="false" />
+        <activity
+            android:name=".intern.internInternshipDetails"
+            android:exported="false" />
+        <activity
             android:name=".Login"
             android:exported="false" />
         <activity
