--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ph.edu.dlsu.mobdeve.misa.eliana.mobdeve_internshipconnect_misa_so">
+    package="ph.edu.dlsu.mobdeve.misa.eliana.mobdeve_internshipconnect_misa_so" >
 
     <application
         android:allowBackup="true"
@@ -8,7 +8,22 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MOBDEVEInternshipConnectMisaSo">
+        android:theme="@style/Theme.MOBDEVEInternshipConnectMisaSo" >
+        <activity
+            android:name=".intern.InternMyInternships"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".item_internship"
+            android:exported="false" />
+        <activity
+            android:name=".intern.InternViewInternships"
+            android:exported="false" />
         <activity
             android:name=".intern.InternUpdateExperience"
             android:exported="false" />
@@ -62,12 +77,14 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:exported="true" >
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
         </activity>
     </application>
 
