--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ph.edu.dlsu.mobdeve.misa.eliana.mobdeve_internshipconnect_misa_so" >
+    package="ph.edu.dlsu.mobdeve.misa.eliana.mobdeve_internshipconnect_misa_so">
 
     <application
         android:allowBackup="true"
@@ -8,7 +8,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MOBDEVEInternshipConnectMisaSo" >
+        android:theme="@style/Theme.MOBDEVEInternshipConnectMisaSo">
+        <activity
+            android:name=".intern.InternProfile"
+            android:exported="false" />
+        <activity
+            android:name=".company.CompanyViewApplicantInformation"
+            android:exported="false" />
         <activity
             android:name=".intern.InternMyInternships"
             android:exported="true">
@@ -71,7 +77,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true" >
+            android:exported="true">
 
             <intent-filter>
             <action android:name="android.intent.action.MAIN" />
