recycler view (not clickable yet)
- company job postings
- intern view internship openings

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,15 +59,15 @@
             android:exported="false" />
         <activity
             android:name=".company.CompanyJobListing"
-            android:exported="false" />
+            android:exported="true" >
+                        <intent-filter>
+                            <action android:name="android.intent.action.MAIN" />
+
+                            <category android:name="android.intent.category.LAUNCHER" />
+                        </intent-filter>
+        </activity>
         <activity
             android:name=".intern.InternViewCompanies"
-            android:exported="false" />
-        <activity
-            android:name=".intern.InternViewComapnies"
-            android:exported="false" />
-        <activity
-            android:name=".company.CompanyAddJobPosting"
             android:exported="false" />
         <activity
             android:name=".intern.InternEditProfile"
@@ -90,11 +90,11 @@
         <activity
             android:name=".MainActivity"
             android:exported="false">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
         </activity>
     </application>
 
