Intern my internships recycler view

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,14 +21,11 @@
         <activity
             android:name=".intern.InternMyInternships"
             android:exported="true">
-
-            <!--
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            -->
         </activity>
         <activity
             android:name=".item_internship"
@@ -59,12 +56,12 @@
             android:exported="false" />
         <activity
             android:name=".company.CompanyJobListing"
-            android:exported="true" >
-                        <intent-filter>
-                            <action android:name="android.intent.action.MAIN" />
+            android:exported="false" >
+<!--                        <intent-filter>-->
+<!--                            <action android:name="android.intent.action.MAIN" />-->
 
-                            <category android:name="android.intent.category.LAUNCHER" />
-                        </intent-filter>
+<!--                            <category android:name="android.intent.category.LAUNCHER" />-->
+<!--                        </intent-filter>-->
         </activity>
         <activity
             android:name=".intern.InternViewCompanies"
