Last recycler view- Intern view company profile
- none of the recycler views are clickable yet

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,18 +11,24 @@
         android:theme="@style/Theme.MOBDEVEInternshipConnectMisaSo">
         <activity
             android:name=".intern.InternViewCompany"
-            android:exported="false" />
-        <activity
-            android:name=".intern.InternProfile"
-            android:exported="false" />
-        <activity
-            android:name=".company.CompanyViewApplicantInformation"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".intern.InternProfile"
+            android:exported="false" />
+        <activity
+            android:name=".company.CompanyViewApplicantInformation"
+            android:exported="false">
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
         </activity>
         <activity
             android:name=".intern.InternMyInternships"
