--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/Theme.MOBDEVEInternshipConnectMisaSo">
         <activity
             android:name=".company.CompanySpecificJobPosting"
-            android:exported="true">
+            android:exported="false">
              <!--<intent-filter>
                  <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -19,7 +19,7 @@
         </activity>
         <activity
             android:name=".intern.InternViewCompany"
-            android:exported="true">
+            android:exported="false">
             <!--<intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -32,7 +32,7 @@
         <activity
             android:name=".company.CompanyViewApplicantInformation"
 
-            android:exported="true">
+            android:exported="false">
             <!--<intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -52,7 +52,7 @@
         </activity>
         <activity
             android:name=".intern.InternViewInternships"
-            android:exported="true">
+            android:exported="false">
            <!--<intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -84,7 +84,7 @@
             android:exported="false" />
         <activity
             android:name=".company.CompanyJobListing"
-            android:exported="true">
+            android:exported="false">
             <!--<intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -92,7 +92,7 @@
         </activity>
         <activity
             android:name=".intern.InternViewCompanies"
-            android:exported="true">
+            android:exported="false">
             <!--<intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -120,7 +120,6 @@
         <activity
             android:name=".MainActivity"
             android:exported="true">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
